# ainoiceguard

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json
.cursor/plans/: noiseguard_starter_project_bccb1a2b.plan.md
electron/: index.html  main.js  preload.js  renderer.js  styles.css  tray.js
native/: CMakeLists.txt  binding.gyp
native/src/: addon.cc  audio.cpp  audio.h  ringbuffer.h  rnnoise_wrapper.cpp  rnnoise_wrapper.h
scripts/: build-native.ps1
